# nodie-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
nodie_cli/: __init__.py  auth.py  cli.py  client.py  config.py  node.py  service.py
tests/: __init__.py  test_client.py  test_config.py
